Thanks page added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DNS000002jUfd" method="POST" onsubmit="beforesubmit()">
     
     <input type=hidden name="oid" value="00DNS000002jUfd">
-    <input type=hidden name="retURL" value="https://www.salesforce.com/trailblazer/ddhage1">
+    <input type=hidden name="retURL" value="https://dimpaldhage.github.io/Web-To-Lead/thanks.html">
     <input type=hidden name="Lead_Date__c" class="outputdate">
 
     <label for="first_name">First Name</label><input  id="first_name" maxlength="40" name="first_name" size="20" type="text" required="true"/><br>
