--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <form
       action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DNS000002jUfd"
       method="POST"
-      onsubmit="beforesubmit(event)"
+      onsubmit="beforesubmit()"
     >
       <input type="hidden" name="oid" value="00DNS000002jUfd" />
       
